--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
+  uses-material-design: true
+  assets:
+    - assets/locales/
 
   # To add assets to your package, add an assets section, like this:
   # assets:
